crates/mockql-core/src/graphql/snapshots/abstract_typename_injector/mockql_core__graphql__abstract_typename_injector__tests__should_add_typename_to_abstract_types@selected_operation.graphql.snap
---
source: crates/mockql-core/src/graphql/abstract_typename_injector.rs
input_file: crates/mockql-core/src/graphql/snapshots/abstract_typename_injector/selected_operation.graphql
---
query Mocked {
  ...MockedFields
}

query Unmocked {
  ...UnmockedFields
}

fragment MockedFields on Query {
  node(id: "1") {
    id
    __typename
  }
}

fragment UnmockedFields on Query {
  search(query: "keyboard") {
    ... on Product {
      name
    }
  }
}
