crates/mockql-core/src/graphql/snapshots/abstract_typename_injector/mockql_core__graphql__abstract_typename_injector__tests__should_add_typename_to_abstract_types@union.graphql.snap
---
source: crates/mockql-core/src/graphql/abstract_typename_injector.rs
input_file: crates/mockql-core/src/graphql/snapshots/abstract_typename_injector/union.graphql
---
{
  search(query: "keyboard") {
    ... on Product {
      name
    }
    __typename
  }
}
